--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="padding: 20px;">
+<div class="body-container">
 
   <mat-grid-list cols="5" columnWidth="2:1" class="std-ta-center">
     <mat-grid-tile colspan="2">
@@ -15,7 +15,7 @@
     </mat-grid-tile>
     <mat-grid-tile colspan="3">
       <mat-card class="purple-background">
-        <div class="card-content card-label">
+        <div class="card-content card-label  border-right">
           <span>Highest earning employee:</span> 
           <label>RM {{higherSalary}}</label>
         </div>
