--- a/src/app/view/data-table/data-table.component.html
+++ b/src/app/view/data-table/data-table.component.html
@@ -1,4 +1,5 @@
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" (matSortChange)="onSortChange($event)">
+<table mat-table [dataSource]="dataSource | slice: lowValue : highValue" matSort class="mat-elevation-z8 fade-in" (matSortChange)="onSortChange($event)">
+<!-- <table mat-table [dataSource]="dataSource | slice: (pageIndex * pageSize) - pageSize :pageIndex * pageSize " matSort class="mat-elevation-z8" (matSortChange)="onSortChange($event)"> -->
 
     <ng-container matColumnDef="fullname">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fullname </th>
@@ -18,6 +19,13 @@
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns" class="table-header"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row ; columns: displayedColumns;"></tr>
   </table>
+
+  <mat-paginator [length]="dataSource.length"
+              pageSize="5"
+              [pageIndex]="0"
+              (page)="getPaginatorData($event)"
+              [pageSizeOptions]="pageSizeOptions">
+</mat-paginator>
   
